--- a/Style/header.css
+++ b/Style/header.css
@@ -6,7 +6,9 @@
 }
 
 body {
-    background-color: #222;
+    background-image: linear-gradient(rgba(10,10,10,0.2), rgba(10,10,10,1)), url("https://i.pinimg.com/originals/e1/94/ed/e194ede516b88c41eaeba1088b12296b.jpg");
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 header {
