add about section

--- a/Style/header.css
+++ b/Style/header.css
@@ -5,6 +5,10 @@
     font-family: "Playfair Display", serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-image: linear-gradient(rgba(10,10,10,0.2), rgba(10,10,10,1)), url("https://i.pinimg.com/originals/e1/94/ed/e194ede516b88c41eaeba1088b12296b.jpg");
     background-size: cover;
@@ -40,4 +44,8 @@ header a {
 
 header a:hover {
     text-shadow: 0 0 10px aliceblue;
+}
+
+section {
+    height: 1000px;
 }
