--- a/Style/header.css
+++ b/Style/header.css
@@ -28,6 +28,7 @@ header {
     position: fixed;
     width: 100%;
     z-index: 100;
+    background-image: linear-gradient(rgba(10,10,10,0.5), transparent);
 }
 
 header ul {
