--- a/Style/loader.css
+++ b/Style/loader.css
@@ -1,9 +1,46 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: #111;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .loader {
-    width: 300px;
-    height: 300px;
-    background-image: url("image/MstxzLogo.png");
+    position: relative;
+    width: 350px;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("Image/MstxzLogo.png");
+    background-size: cover;
+}
+
+.loader::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 3px solid #111;
+    border-top: 3px solid white;
+    border-radius: 50%;
+    animation: spin linear 3s infinite;
+}
+
+@keyframes spin {
+    from {
+        transform: rotateZ(0deg);
+    }
+    to {
+        transform: rotateZ(360deg);
+    }
 }
