--- a/Style/loader.css
+++ b/Style/loader.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: #111;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,7 +21,9 @@ body {
     justify-content: center;
     align-items: center;
     background-image: url("Image/MstxzLogo.png");
-    background-size: cover;
+    background-size: 300px;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .loader::before {
@@ -31,7 +34,7 @@ body {
     width: 100%;
     height: 100%;
     border: 3px solid #111;
-    border-top: 3px solid white;
+    border-top: 3px solid aliceblue;
     border-radius: 50%;
     animation: spin linear 3s infinite;
 }
