--- a/Style/index.css
+++ b/Style/index.css
@@ -32,6 +32,7 @@
 /*about*/
 
 .about {
+    background-image: linear-gradient(transparent, #335 40%);
     position: relative;
     display: flex;
     text-align: center;
