--- a/Style/index.css
+++ b/Style/index.css
@@ -42,6 +42,7 @@
     color: aliceblue;
     flex-direction: column;
     gap: 3rem;
+    z-index: 1;
 }
 
 .about h1 {
@@ -57,6 +58,7 @@
     background-color: #335;
     color: white;
     padding:  10% 5%;
+    z-index: 1;
 }
 
 .games h1 {
