--- a/Style/particle.css
+++ b/Style/particle.css
@@ -1,59 +1,7 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background-image: radial-gradient(#333, #111);
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-.loader {
-    position: relative;
-    width: 350px;
-    height: 350px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url("Image/MstxzLogo.png");
-    background-size: 300px;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.loader::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 6px solid transparent;
-    border-top: 6px solid aliceblue;
-    border-radius: 50%;
-    animation: spin linear 2.5s infinite;
-}
-
-/*animation*/
-
-@keyframes spin {
-    from {
-        transform: rotateZ(0deg);
-    }
-    to {
-        transform: rotateZ(360deg);
-    }
-}
-
 /*particle*/
 .particle-container {
     position:absolute;
-    top:0; left:8%; bottom:0;
+    top:30%; left:8%; bottom:0;
     width:90%;
     mix-blend-mode: soft-light;
     --timescale:0.5s;
@@ -70,7 +18,7 @@ body {
   }
   .pt b{
     display:block;
-    background:url(https://res.cloudinary.com/monson-productions/image/upload/v1645640126/glowey_yfdvor.png);
+    background:url('https://res.cloudinary.com/monson-productions/image/upload/v1645640126/glowey_yfdvor.png');
     background-size:contain;
     /*border:dotted thin green; */
     width: calc( 0.1vw * var(--w) );
