--- a/Style/index.css
+++ b/Style/index.css
@@ -54,6 +54,12 @@
 }
 
 /*Games*/
+
+.game-content {
+    display: flex;
+    flex-direction: row;
+}
+
 .games {
     background-color: #335;
     color: white;
@@ -66,20 +72,34 @@
     letter-spacing: 3px;
     font-size: 60px;
     text-align: center;
+    flex-direction: row;
 }
 
 .selection {
-    height: 100%;
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
 }
 
 .selection-content {
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    padding: 10px;
+    margin: 10px;
+}
+
+.selection-content-emblem {
     border-radius: 50%;
     border: 5px dashed aliceblue;
     border-bottom: 5px solid aliceblue;
     border-right: 5px solid aliceblue;
+    background-image: linear-gradient(to top left, rgba(240, 244, 255, 0.5), transparent);
+    background-position: center;
     width: 250px;
     height: 250px;
 }
