--- a/Style/index.css
+++ b/Style/index.css
@@ -79,7 +79,7 @@
 .selection {
     display: flex;
     justify-content: space-evenly;
-    width: 20%;
+    width: 25%;
     padding: 10px;
     margin: 10px;
 }
@@ -117,6 +117,30 @@
 .selection-content:hover h2 {
     transform: scale(1.25);
     transition: all 0.5s ease;
+}
+
+/*wiki*/
+.wiki {
+    background-color: #335;
+    padding: 5%;
+    color: aliceblue;
+}
+
+.wiki h1 {
+    text-align: center;
+    font-size: 50px;
+    text-transform: uppercase;
+}
+
+.wikitable {
+    border: 1px solid aliceblue;
+    height: 100%;
+    width: 100%;
+}
+
+.wikitable th {
+    background-color: rgba(240, 244, 255, 0.3);
+    border: none;
 }
 
 /*Animation*/
